Fix hero spacing

--- a/css/main.css
+++ b/css/main.css
@@ -233,14 +233,15 @@ body {
 .hero {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .hero__content {
   width: 100%;
   max-width: 1250px;
   margin: 0 auto;
   display: flex;
-  align-items: flex-start;
   justify-content: space-between;
+  margin-bottom: 32px;
 }
 .hero__text {
   max-width: 50%;
@@ -335,10 +336,12 @@ body {
 .trusted {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 24px;
   margin-bottom: 36px;
+  width: 100%;
+  max-width: 1250px;
+  margin: 0 auto;
+  display: flex;
   justify-content: space-between;
-  align-items: first baseline;
 }
 .trusted__world {
   text-align: end;
