--- a/scss/2-sections/_trusted-by.scss
+++ b/scss/2-sections/_trusted-by.scss
@@ -4,10 +4,12 @@
 .trusted {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 24px;
     margin-bottom: 36px;
+    width: 100%;
+    max-width: 1250px;
+    margin: 0 auto;
+    display: flex;
     justify-content: space-between;
-    align-items: first baseline;
     
     
     
